@@ -1033,7 +1033,7 @@ threading::Value* Manager::ValToLogVal(Val* val, BroType* ty)
 		for ( int i = 0; i < lval->val.vector_val.size; i++ )
 			{
 			lval->val.vector_val.vals[i] =
-				ValToLogVal(vec->Lookup(i),
+				ValToLogVal(vec->At(i).get(),
 					    vec->GetType()->Yield().get());
 			}
 
