@@ -1012,7 +1012,7 @@ Supervisor::NodeConfig Supervisor::NodeConfig::FromRecord(const RecordVal* node)
 
 	for ( auto i = 0u; i < scripts_val->Size(); ++i )
 		{
-		auto script = scripts_val->Lookup(i)->AsStringVal()->ToStdString();
+		auto script = scripts_val->At(i)->AsStringVal()->ToStdString();
 		rval.scripts.emplace_back(std::move(script));
 		}
 
