@@ -216,6 +216,8 @@ Deprecated Functionality
 - ``VectorVal::Assign`` and ``Insert`` methods taking raw ``Val*`` are
   deprecated, use the methods that take ``IntrusivePtr``.
 
+- ``VectorVal::Lookup()`` is deprecated, use ``VectorVal::At()``.
+
 Zeek 3.1.0
 ==========
 
